vlib/v/checker/tests/chan_mut.out
vlib/v/checker/tests/chan_mut.vv:8:8: error: cannot push non-reference `St` on `chan &St`
    6 | fn f(ch chan &St) {
    7 |     v := St{}
    8 |     ch <- v
      |           ^
    9 |     x := &St{}
   10 |     ch <- x
vlib/v/checker/tests/chan_mut.vv:12:8: error: cannot push non-reference `St` on `chan &St`
   10 |     ch <- x
   11 |     mut y := St{}
   12 |     ch <- y
      |           ^
   13 |     mut z := &St{n: 7}
   14 |     // this works
