vlib/v/checker/tests/chan_mut.vv
struct St{
mut:
	n int
}

fn f(ch chan &St) {
	v := St{}
	ch <- v
	x := &St{}
	ch <- x
	mut y := St{}
	ch <- y
	mut z := &St{n: 7}
	// this works
	ch <- z
}

fn main() {
	c := chan &St{}
	go f(c)
	mut y := <-c
	z := <-c
	println(y)
	println(z)
}
